--- a/GRAFICA/settings.json
+++ b/GRAFICA/settings.json
@@ -7,10 +7,10 @@
     "function_size": "2",
     "scatter_toggle": false,
     "function_toggle": true,
-    "text_title": "Sample",
-    "text_label_x": "Raman shift [cm\\^{-1}]",
-    "text_label_y": "Intensity [counts]",
-    "text_label_2y": "2nd axis",
+    "text_title": "Title",
+    "text_label_x": "X axis",
+    "text_label_y": "Y axis",
+    "text_label_2y": "2Y axis",
     "font_size_title": "64",
     "font_size_label_x": "48",
     "font_size_label_y": "48",
@@ -18,6 +18,6 @@
     "round_x": "0",
     "round_y": "0",
     "round_2y": "0",
-    "x_legend": 0.5,
-    "y_legend": 0.5
+    "x_legend": 0.75,
+    "y_legend": 0.3
 }
